--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/BitcoinHackathon/b-chan#readme",
   "dependencies": {
+    "bitbox-cli": "^1.6.6",
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
