--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-reload": "^1.1.0"
+    "express-reload": "^1.1.0",
+    "google-auth-library": "^2.0.0",
+    "googleapis": "^33.0.0",
+    "oauth2client": "^1.0.0",
+    "youtube-live-chat": "^1.0.1"
   }
 }
